force-app/main/objects/Customer__c.object
<CustomObject>
    <fields>
        <fullName>Churn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Churn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One Year</fullName>
                </value>
                <value>
                    <fullName>Two Year</fullName>
                </value>
                <value>
                    <fullName>Month-to-Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>Customer Identifier</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Dependents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dependents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Device_Protection__c</fullName>
        <label>Device Protection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Internet_Service_Customer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internet_Service__c</fullName>
        <label>Internet Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DSL</fullName>
                </value>
                <value>
                    <fullName>Fiber Optic</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiple_Lines__c</fullName>
        <label>Multiple Lines</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No Phone Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Online_Backup__c</fullName>
        <label>Online Backup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Internet_Service_Customer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Online_Security__c</fullName>
        <label>Online Security</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Internet_Service_Customer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paperless_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paperless Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic Check</fullName>
                </value>
                <value>
                    <fullName>Mailed Check</fullName>
                </value>
                <value>
                    <fullName>Bank Transfer (Automatic)</fullName>
                </value>
                <value>
                    <fullName>Credit Card (Automatic)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Senior_Citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Senior Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Streaming_Movies__c</fullName>
        <label>Streaming Movies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Internet_Service_Customer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Streaming_TV__c</fullName>
        <label>Streaming TV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Internet_Service_Customer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Support__c</fullName>
        <label>Tech Support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Internet_Service_Customer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenure__c</fullName>
        <label>Tenure</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer_ID__c</columns>
        <columns>Gender__c</columns>
        <columns>Internet_Service__c</columns>
        <columns>Phone_Service__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Tenure__c</columns>
        <columns>Churn__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Customer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>